--- a/gql/pubspec.yaml
+++ b/gql/pubspec.yaml
@@ -1,7 +1,7 @@
 name: gql
 version: 0.12.4
 description: GraphQL tools for parsing, transforming and printing GraphQL documents.
-repository: https://github.com/gql-dart/gql
+repository: https://github.com/lohitbura/gql
 environment: 
   sdk: '>=2.7.2 <3.0.0'
 dependencies: 
