--- a/links/gql_http_link/pubspec.yaml
+++ b/links/gql_http_link/pubspec.yaml
@@ -1,7 +1,7 @@
 name: gql_http_link
 version: 0.4.0-nullsafety.1
 description: GQL Terminating Link to execute requests via HTTP using JSON.
-repository: https://github.com/gql-dart/gql
+repository: https://github.com/lohitbura/gql
 environment: 
   sdk: '>=2.12.0 <3.0.0'
 dependencies: 
