--- a/gql/pubspec.yaml
+++ b/gql/pubspec.yaml
@@ -1,7 +1,7 @@
 name: gql
 version: 0.13.0-nullsafety.2
 description: GraphQL tools for parsing, transforming and printing GraphQL documents.
-repository: https://github.com/gql-dart/gql
+repository: https://github.com/lohitbura/gql
 environment: 
   sdk: '>=2.12.0 <3.0.0'
 dependencies: 
